objects/Case_Status_Change__c.object
<CustomObject><fields>
        <fullName>Age__c</fullName>
        <label>Status Time (in days, hrs, mins, secs)</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Case__c</fullName>
        <label>Case Number</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Status Changes</relationshipLabel>
        <relationshipName>Case_Status_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Change_Time__c</fullName>
        <label>Status End Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Current_Case_Owner__c</fullName>
        <label>Case Owner at Change</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Set_Time__c</fullName>
        <label>Status Start Time</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Status_From__c</fullName>
        <label>Status Changed From</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_Name__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Status_Time__c</fullName>
        <label>Status Time (numeric hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Case Status Change</label><nameField>
        <label>Case Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Case Status Changes</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Current_Case_Owner__c</columns>
        <columns>Set_Time__c</columns>
        <columns>Change_Time__c</columns>
        <columns>Status_From__c</columns>
        <columns>Status_Name__c</columns>
        <columns>Status_Time__c</columns>
        <columns>Age__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>